# cdagent

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cdagent-config.yml  config.yml  db-empty.json  example-config.yaml
.github/workflows/: ci.yml
src/: config.rs  database.rs  email.rs  github.rs  http.rs  main.rs  project.rs  status.html
