[package]
name = "cdagent"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = "2.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
shlex = "1.2.0"
ctrlc = {version = "3.4.2", features = ["termination"] }
tiny_http = "0.12.0"
handlebars = "5.1.1"
chrono = "0.4.32"
